2010-09-04 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/AT89C513xA.h: new, added, thanks Anirban Brahmachari

2010-08-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Fixed #3052514.

2010-08-26 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/gen.c (genCast): fixed bug with ruonly src and dest downcast,
	  (AOP_IS_STR): replaced thoughout with IS_OP_RUONLY,
	  synced with mcs51,
	  (genDjnz): fixed bug 2995824
	* src/mcs51/gen.c (continueIfTrue, jumpIfTrue, jmpTrueOrFalse, genAnd,
	  genOr, genXor, genDjnz): fixed bugs 2989562 and 2995824
	* src/ds390/ralloc.c,
	* src/SDCC.lex: cosmetic changes
	* support/regression/tests/bug2686159.c: disabled segfaulting test on host
	* support/regression/tests/bug2989562.c: new, added

2010-08-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCcse.c (cseBBlock): fixed bug 2686159 with part of patch by Robert
	  Larice, thanks
	* src/SDCCBBlock.c,
	* src/SDCCglobl.h: cosmetic changes
	* support/regression/tests/bug2686159.c: new, added

2010-08-23 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (genAnd, genOr, genXor): fixed bug 2944399
	* src/mcs51/ralloc.c (packRegsForAccUse): disabled strange exception
	* support/regression/tests/bug2944399.c: new, added

2010-08-22 Borut Razem <borut.razem AT siol.net>

	* device/include/mcs51/msc1210.h:
	  sdcc library license changed to GPL+LE

2010-08-20 Raphael Neider <rneider AT web.de>

	* device/include/pic16/adc.h,
	* device/include/pic16/pic18fam.h,
	* device/include/pic16/usart.h,
	* device/lib/pic16/libio/adc/*.c,
	* device/lib/pic16/libio/usart/*.c
	* doc/sdccman.lyx,
	* support/scripts/inc2h-pic16.pl,
	* support/scripts/pic18fam-h-gen.pl: automatized device I/O style
	  classification, provide USART initialization for more devices,
	  addresses item 2 from #1631532.

2010-08-18 Borut Razem <borut.razem AT siol.net>

	* sdas/asxxsrc/asdbg.c:
	  cosmetic change