@@ -41,7 +41,12 @@ AC_MSG_RESULT($TYPE_BYTE)
 AC_MSG_CHECKING(type name for word)
 TYPE_WORD=`type_name 2`
 AC_MSG_RESULT($TYPE_WORD)
-AC_DEFINE_UNQUOTED(TYPE_BYTE, $TYPE_BYTE)
-AC_DEFINE_UNQUOTED(TYPE_WORD, $TYPE_WORD)
+AC_DEFINE_UNQUOTED(TYPE_BYTE, [$TYPE_BYTE], [XXX])
+AC_DEFINE_UNQUOTED(TYPE_WORD, [$TYPE_WORD], [XXX])
+AC_DEFINE_UNQUOTED(TYPE_UBYTE, [unsigned $TYPE_BYTE], [XXX])
+AC_DEFINE_UNQUOTED(TYPE_UWORD, [unsigned $TYPE_WORD], [XXX])
+
+AH_BOTTOM([typedef TYPE_UBYTE Uint8;
+typedef TYPE_UWORD Uint16;])
 
 AC_OUTPUT(Makefile)
